fix horizontal scrollbar

--- a/static/css/pad2.css
+++ b/static/css/pad2.css
@@ -14,3 +14,6 @@
 * {
     font-family: 'Fira Mono' !important;
 }
+body#outerdocbody {
+    overflow-x: hidden !important;
+}
